--- a/trunk/Molecule/Molecule.csproj
+++ b/trunk/Molecule/Molecule.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{5328FC2C-EB3D-48A2-AC5D-4CD4C9DC569E}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -76,6 +76,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Collections\Dictionary.cs" />
+    <Compile Include="Collections\IKeyedEnumerable.cs" />
     <Compile Include="Configuration\ConfigurationClient.cs" />
     <Compile Include="Configuration\IConfigurationClient.cs" />
     <Compile Include="Configuration\MemoryConfigurationClient.cs" />
