--- a/trunk/Molecule.WebSite/Molecule.WebSite.csproj
+++ b/trunk/Molecule.WebSite/Molecule.WebSite.csproj
@@ -320,13 +320,15 @@
     <Content Include="App_Themes\bloup\images\document-save.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Themes\bloup\images\go-next.png" />
+    <Content Include="App_Themes\bloup\images\go-previous.png" />
     <Content Include="App_Themes\bloup\molecule.css" />
     <Content Include="App_Themes\bloup\progressbarlayout.css" />
     <Content Include="App_Themes\default\common.css" />
     <Content Include="atomes\photo\Atome.xml" />
     <Content Include="atomes\photo\Calendar.aspx" />
     <Content Include="atomes\photo\Default.aspx" />
-    <Content Include="atomes\photo\layout.css" />
+    <Content Include="atomes\photo\style\calendar.css" />
     <Content Include="atomes\photo\Photo.aspx" />
     <Content Include="atomes\photo\stublibrary\photo1.jpg" />
     <Content Include="atomes\photo\stublibrary\photo9.jpg" />
@@ -339,6 +341,8 @@
     <Content Include="atomes\photo\stublibrary\photo3.jpg" />
     <Content Include="atomes\photo\stublibrary\photo2.jpg" />
     <Content Include="atomes\photo\PhotoFile.aspx" />
+    <Content Include="atomes\photo\style\common.css" />
+    <Content Include="atomes\photo\style\photo.css" />
     <Content Include="atomes\upload\Atome.xml" />
     <Content Include="atomes\upload\Default.aspx" />
     <Content Include="atomes\upload\scripts\default.js" />
