--- a/trunk/Molecule.MvcWebSite/Molecule.MvcWebSite.csproj
+++ b/trunk/Molecule.MvcWebSite/Molecule.MvcWebSite.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -404,6 +404,7 @@
     <Content Include="atomes\music\Views\Download\Files.aspx" />
     <Content Include="atomes\template\Views\Web.config" />
     <Content Include="Scripts\ajaxupload.js" />
+    <Content Include="Themes\gurinu\molecule.css" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Themes\bloup\images\molecule-6-rot.svg" />
@@ -411,6 +412,7 @@
   <ItemGroup>
     <Folder Include="atomes\template\Data\" />
     <Folder Include="logs\" />
+    <Folder Include="Themes\gurinu\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v9.0\WebApplications\Microsoft.WebApplication.targets" />
